kubernetes/apps/dragonfly/monitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dragonfly-metrics
  namespace: dragonfly
  labels:
    app: dragonfly
spec:
  selector:
    app: dragonfly
  ports:
  - name: admin
    port: 9999
    targetPort: 9999
    protocol: TCP
  type: ClusterIP
