kubernetes/apps/dragonfly/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-redis-clients
spec:
  podSelector:
    matchLabels:
      app: dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - immich
                  - paperless-ngx
      ports:
        - protocol: TCP
          port: 6379
